--- a/home.html
+++ b/home.html
@@ -76,8 +76,8 @@
                                 </div>
                             </div>
                             <div class="horizontal-width">
-                                <div class="card border-change pen">
-                                    <img class="card-img-top pen" src="assets/foods/food3.jpeg" alt="Card image cap" />
+                                <div class="card border-change pen" onclick="location.href='#product1'">
+                                    <img class="card-img-top pen" src="assets/foods/food9.jpg" alt="Card image cap" />
                                     <p class="card-text horizontal-post"><b>Pizza</b></p>
                                 </div>
                             </div>
@@ -96,13 +96,13 @@
                             <div class="horizontal-width">
                                 <div class="card border-change pen">
                                     <img class="card-img-top pen" src="assets/foods/food5.jpeg" alt="Card image cap" />
-                                    <p class="card-text horizontal-post"><b>Parata</b></p>
+                                    <p class="card-text horizontal-post"><b>Soup</b></p>
                                 </div>
                             </div>
                             <div class="horizontal-width">
                                 <div class="card border-change pen">
                                     <img class="card-img-top pen" src="assets/foods/food5.jpeg" alt="Card image cap" />
-                                    <p class="card-text horizontal-post"><b>Parata</b></p>
+                                    <p class="card-text horizontal-post"><b>Biriyani</b></p>
                                 </div>
                             </div>
                         </div>
@@ -117,42 +117,42 @@
                         <img class="card-img-top pen horizontal-pen" src="assets/resturant1.jpg" alt="Card image cap" />
                         <div class="card-body rechange">
                             <p class="card-text"><b>Rose Garden Restaurant</b></p>
-                            <p class="card-text font">Burger - Chiken - Riche - Wings</p>
+                            <p class="card-text font">Pizza - Chiken - Riche - Wings</p>
                         </div>
                     </div>
                     <div class="card space grid_two" onclick="location.href='#resturant2'">
                         <img class="card-img-top pen horizontal-pen" src="assets/resturant2.jpeg" alt="Card image cap" />
                         <div class="card-body rechange">
                             <p class="card-text"><b>Chicken Hut</b></p>
-                            <p class="card-text font">Chiken Eat with Curry</p>
+                            <p class="card-text font">Food Is Our Common Ground, A Universal Experience.</p>
                         </div>
                     </div>
                     <div class="card space grid_three">
                         <img class="card-img-top pen horizontal-pen" onclick="location.href='#resturant3'" src="assets/resturant3.jpg" alt="Card image cap" />
                         <div class="card-body rechange">
                             <p class="card-text"><b>ST Food</b></p>
-                            <p class="card-text font">Chiken Eat with Curry</p>
+                            <p class="card-text font">Welcome to our place. You will find happiness and food here.</p>
                         </div>
                     </div>
                     <div class="card space grid_four">
                         <img class="card-img-top pen horizontal-pen" onclick="location.href='#resturant4'" src="assets/resturant4.jpg" alt="Card image cap" />
                         <div class="card-body rechange">
                             <p class="card-text"><b>Rice & Curry Pot</b></p>
-                            <p class="card-text font">Chiken Eat with Curry</p>
+                            <p class="card-text font">Welcome! May the best food find your appetite.</p>
                         </div>
                     </div>
                     <div class="card space grid_four">
                         <img class="card-img-top pen horizontal-pen" onclick="location.href='#resturant5'" src="assets/resturant5.jpg" alt="Card image cap" />
                         <div class="card-body rechange">
                             <p class="card-text"><b>Food Pot</b></p>
-                            <p class="card-text font">Chiken Eat with Curry</p>
+                            <p class="card-text font">Food Eat It Quick Or You Will Have To Share It.</p>
                         </div>
                     </div>
                     <div class="card space grid_four">
                         <img class="card-img-top pen horizontal-pen" onclick="location.href='#resturant6'" src="assets/resturant6.jpeg" alt="Card image cap" />
                         <div class="card-body rechange">
                             <p class="card-text"><b>Hot Pot</b></p>
-                            <p class="card-text font">Chiken Eat with Curry</p>
+                            <p class="card-text font">Food is really and truly the most effective medicine.</p>
                         </div>
                     </div>
                 </div>
@@ -297,7 +297,7 @@
                     <img class="card-img-top penn" src="assets/resturant2.jpeg" alt="Card image cap" />
                     <div class="card-body rechangee">
                         <p class="card-text"><b>Chicken Hut</b></p>
-                        <p class="card-text fontt">A restaurant is generally an establishment where the public may obtain meals or refreshments. and broths served within.</p>
+                        <p class="card-text fontt">Located at Colombo 8. We offer a wide array of fresh food - green pork plate, chimichangas, hamburger, barbacoa plate, pizza, salads, bbq with rice and beans and more. We use the freshest ingredients in preparing our food to provide the best quality and taste. Try our delicious food today! </p>
                     </div>
                 </div>
                 <div class="ui-grid-c c-plus">
@@ -399,7 +399,7 @@
                     <img class="card-img-top penn" src="assets/resturant3.jpg" alt="Card image cap" />
                     <div class="card-body rechangee">
                         <p class="card-text"><b>ST Food</b></p>
-                        <p class="card-text fontt">A restaurant is generally an establishment where the public may obtain meals or refreshments. and broths served within.</p>
+                        <p class="card-text fontt">ST Food specializes in delicious food featuring fresh ingredients and masterful preparation by the ST Food culinary team. Whether you're ordering a multi-course meal or grabbing a drink and pizza at the bar, ST Food's lively, casual yet upscale atmosphere makes it perfect for dining with friends, family, clients and business associates.</p>
                     </div>
                 </div>
                 <div class="ui-grid-c c-plus">
@@ -501,7 +501,7 @@
                     <img class="card-img-top penn" src="assets/resturant4.jpg" alt="Card image cap" />
                     <div class="card-body rechangee">
                         <p class="card-text"><b>Rice & Curry Pot</b></p>
-                        <p class="card-text fontt">A restaurant is generally an establishment where the public may obtain meals or refreshments. and broths served within.</p>
+                        <p class="card-text fontt">Our values include providing fair wages for workers, giving back to the communities we work with, and serving great food.</p>
                     </div>
                 </div>
                 <div class="ui-grid-c c-plus">
@@ -603,7 +603,7 @@
                     <img class="card-img-top penn" src="assets/resturant5.jpg" alt="Card image cap" />
                     <div class="card-body rechangee">
                         <p class="card-text"><b>Food Pot</b></p>
-                        <p class="card-text fontt">A restaurant is generally an establishment where the public may obtain meals or refreshments. and broths served within.</p>
+                        <p class="card-text fontt">Life is like a restaurant; you can have anything you want as long as you are willing to pay the price.We are serving foods for you guys</p>
                     </div>
                 </div>
                 <div class="ui-grid-c c-plus">
@@ -705,7 +705,7 @@
                     <img class="card-img-top penn" src="assets/resturant6.jpeg" alt="Card image cap" />
                     <div class="card-body rechangee">
                         <p class="card-text"><b>Hot Pot</b></p>
-                        <p class="card-text fontt">A restaurant is generally an establishment where the public may obtain meals or refreshments. and broths served within.</p>
+                        <p class="card-text fontt">Hot Pot is a Contemporary Creole restaurant creating unique dishes with a focus on local ingredients and inspired by classical training. Located in a Colombo 4, the main dining room caters to the most unique dining experience. </p>
                     </div>
                 </div>
                 <div class="ui-grid-c c-plus">
