--- a/profile.html
+++ b/profile.html
@@ -170,6 +170,17 @@
       text-shadow: 0 1px 0 #eeeeee!important;
       font-weight: bold!important;
     }
+    .tol {
+        position: relative!important;
+        top: -294px!important;
+        right: -234px!important;
+        color: #FF7622!important;
+        font-size: 20px!important;
+
+    }
+    .student-profile .card .card-header .profile_img {
+        border: none!important;
+    }
     @media screen and (orientation:landscape) {
         .to {
             position: relative!important;
@@ -178,6 +189,13 @@
             border: none!important;
             border-radius: 0.25rem!important;
         }
+        .tol {
+            position: relative!important;
+            top: -288px!important;
+            right: -578px!important;
+            color: #FF7622!important;
+            font-size: 20px!important;
+         }
     }
 </style>
 <body>
@@ -197,12 +215,12 @@
                 <div class="col-lg-4 ">
                     <div class="card shadow-sm">
                         <div class="card-header bg-transparent text-center">
-                            <img class="profile_img" src="assets/profile/t.png" alt="student dp">
+                            <img class="profile_img" src="assets/icons/icon9.png" alt="student dp">
                             <input class="to" id="profile"></input>
                         </div>
                         <div class="card-body">
                             <p class="mb-0"><strong class="pr-1">I love Fast Food</strong></p>
-                            <p class="mb-0" onclick="location.href='login/index.php'" ><strong class="pr-1"></strong>Sign Out</p>
+                            <p class="mb-0 tol" onclick="location.href='login/index.php'" ><strong class="pr-1"></strong><b>Sign Out</b></p>
                         </div>
                     </div>
                 </div>
@@ -214,14 +232,14 @@
                                     <th width="30%"><img class="profile_img" src="assets/profile/call.png" alt="student dp"></th>                               
                                     <td>
                                         FULL NAME<br>
-                                        Aari Lost
+                                        Nipun Thathsara
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="30%"><img class="profile_img" src="assets/profile/email.png" alt="student dp"> </th>                            
                                     <td>
                                         EMAIL<br>
-                                        inura@email.com
+                                        nipun@email.com
                                     </td>
                                 </tr>
                                 <tr>
