profile page, favourite list page

--- a/orderHistory.html
+++ b/orderHistory.html
@@ -52,7 +52,7 @@
       <div class="ui-grid-b">
         <div class="ui-block-a">
           <a href="profile.html" target="_self">
-            <div class="ui-bar space border-color right" >
+            <div class="ui-bar space border-color" >
                 <img src="assets/icons/icon10.png" alt="Back" class="backIcon" />
             </div>
           </a>
