--- a/restaurantView.html
+++ b/restaurantView.html
@@ -164,7 +164,7 @@
           <a href="productDetails.html" target="_self">
             <img class="card-img-top content" src="assets/poi/images.jpg" alt="Card image cap">
           </a>
-          <p class="card-text font text">Gartlic Angel Hair Pasta<br>Rs 500</p>
+          <p class="card-text font text">Garlic Angel Hair Pasta<br>Rs 500</p>
         </div>
         <div class="ui-block-b">
           <img class="card-img-top content" src="assets/poi/images (2).jpg" alt="Card image cap">
