--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
           </a>
         </div>
         <div class="ui-block-c">
-          <div class="ui-bar ui-bar space border-color left" >
+          <div class="ui-bar ui-bar space border-color left" onclick="location.href='favourite/favourite-list.html'">
             <img src="assets/icons/icon1.png" alt="Girl in a jacket" class="man-image" />
           </div>
         </div> 
@@ -204,7 +204,7 @@
         <div data-role="navbar" >
           <ul>
             <li><a href="#" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-            <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a href="profile.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
             <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
             <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
           </ul>
