--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@
           <p class="card-text font">Burger - Chiken - Riche - Wings</p>
         </div>
       </div>
-      <div class="card space" >
+      <div class="card space" onclick="location.href='poi.html'">
         <img class="card-img-top pen" src="assets/resturant2.jpeg" alt="Card image cap">
         <div class="card-body rechange">
           <p class="card-text"><b>Chicken Hut</b></p>
