--- a/poi.html
+++ b/poi.html
@@ -138,55 +138,53 @@
       </div>
      
       <div class="card space">
-        <img class="card-img-top pen" src="assets/resturant1.jpeg" alt="Card image cap">
+        <img class="card-img-top pen" src="assets/resturant2.jpeg" alt="Card image cap">
         <div class="card-body rechange">
-          <p class="card-text title"><b>Rose Garden Restaurant</b></p>
-          <p class="card-text font">Meat can be smoky, spicy, well-done, tender, juicy, lean, or aged.
-            Vegetables can range between fresh, earthy, and zesty.
-            Sauces are sweet, sour, bitter, tangy, rich, or fruity.</p>
+          <p class="card-text title"><b>Chicken Hut Restaurant</b></p>
+          <p class="card-text font">Enjoy your favourite flavour with chicken. Country-fried, Broasted, Buffalo wings, Buttermilk, Korean, Popcorn, Karaage, Nashville hot chicken and many more your favourites. All in one place.</p>
             
           <div class="ui-grid-c">
             <div class="ui-block-a" style="padding: 10px;">
-              <button class="card-text categories" style="background-color:#FF7622; color: white; border-radius: 25px;">Pasta</button>
+              <button class="card-text categories" style="background-color:#FF7622; color: white; border-radius: 25px;">Buttermilk</button>
             </div>
             <div class="ui-block-b"  style="padding: 10px;">
-              <button class="card-text categories" style="background-color:white; border-radius: 25px;">Noodles</button>
+              <button class="card-text categories" style="background-color:white; border-radius: 25px;">Popcorn</button>
             </div>
             <div class="ui-block-c"  style="padding: 10px;">
-              <button class="card-text categories" style="background-color:white; border-radius: 25px;">Pizza</button>
+              <button class="card-text categories" style="background-color:white; border-radius: 25px;">Crispy</button>
             </div>
           </div>
 
       </div>
       <div class="ui-grid-b">
-        <p class="card-text font" style="padding-top: 40px;"><b>Pasta (6)</b></p>
+        <p class="card-text font" style="padding-top: 40px;"><b>Chicken (6)</b></p>
         <div class="ui-block-a"> 
           <a href="productDetails.html" target="_self">
-            <img class="card-img-top content" src="assets/poi/images.jpg" alt="Card image cap">
+            <img class="card-img-top content" src="assets/poi/korean.jpg" alt="Card image cap">
           </a>
-          <p class="card-text font text">Garlic Angel Hair Pasta<br>Rs 500</p>
+          <p class="card-text font text">Korean Chicken<br>Rs 500</p>
         </div>
         <div class="ui-block-b">
-          <img class="card-img-top content" src="assets/poi/images (2).jpg" alt="Card image cap">
-          <p class="card-text font text">Cream Pasta<br>Rs 800</p>
+          <img class="card-img-top content" src="assets/poi/popcorn.jpg" alt="Card image cap">
+          <p class="card-text font text">Popcorn Chicken<br>Rs 800</p>
         </div>
         <div class="ui-block-c">
-          <img class="card-img-top content" src="assets/poi/images (1).jpg" alt="Card image cap">
-          <p class="card-text font text">Macaroni<br>Rs 850</p>
+          <img class="card-img-top content" src="assets/poi/country fried.jpg" alt="Card image cap">
+          <p class="card-text font text">Country Fried Chicken<br>Rs 850</p>
         </div>
       </div>
       <div class="ui-grid-b">
         <div class="ui-block-a">
-          <img class="card-img-top content" src="assets/poi/images (3).jpg" alt="Card image cap">
-          <p class="card-text font text">Devilled Pasta<br>Rs 700</p>
+          <img class="card-img-top content" src="assets/poi/nashville hot chicken.jpg" alt="Card image cap">
+          <p class="card-text font text">Nashville Hot Chicken<br>Rs 700</p>
         </div>
         <div class="ui-block-b">
-          <img class="card-img-top content" src="assets/poi/images (4).jpg" alt="Card image cap">
-          <p class="card-text font text">Spicy Garlic Pasta<br>Rs 900</p>
+          <img class="card-img-top content" src="assets/poi/buttermilk.jpg" alt="Card image cap">
+          <p class="card-text font text">Buttermilk Chicken<br>Rs 900</p>
         </div>
         <div class="ui-block-c">
-          <img class="card-img-top content" src="assets/poi/images.jpg" alt="Card image cap">
-          <p class="card-text font text">Cream Mayo Pasta<br>Rs 800</p>
+          <img class="card-img-top content" src="assets/poi/crispy chicken.jpg" alt="Card image cap">
+          <p class="card-text font text">Crispy Chicken<br>Rs 800</p>
         </div>
       </div>
     </div>  
@@ -196,8 +194,8 @@
       <div data-role="header">
         <div data-role="navbar" >
           <ul>
-            <li><a href="home.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-            <li><a href="profile.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
             <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
             <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
           </ul>
