--- a/productDetails.html
+++ b/productDetails.html
@@ -130,7 +130,7 @@
   <body>   
     <div class="p-1">
       <div class="ui-grid-b">
-        <div class="ui-block-a" onclick="history.back()">
+        <div class="ui-block-a" onclick="location.href='home.html'">
           <div class="ui-bar space border-color right" >
             <img src="assets/icons/icon10.png" alt="Back" class="backIcon" />
           </div>
