home design change

--- a/home.html
+++ b/home.html
@@ -133,25 +133,25 @@
           <li><a href="#">Orange</a></li>
       </ul>
       <div class="ui-grid-a">
-        <div class="ui-block-a"><div class="ui-bar ui-bar space border-color right" style="height:34px">All Categories</div></div>
-        <div class="ui-block-b"><div class="ui-bar ui-bar space border-color left" style="height:34px">See All </div></div>
+        <div class="ui-block-a"><div class="ui-bar ui-bar space border-color right card-text" style="height:34px">All Categories</div></div>
+        <div class="ui-block-b"><div class="ui-bar ui-bar space border-color left card-text" style="height:34px">See All </div></div>
       </div>
       <div role="main">
         <div class="container-fluid">
           <div class="scrolling-wrapper row flex-row flex-nowrap mt-4 pb-4 pt-2">
-            <div class="col-5">
+            <div class="col-3">
               <div class="card border-change pen " >
                 <img class="card-img-top pen " src="assets/foods/food2.jpeg" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Parata</b></p>
               </div>
             </div>
-            <div class="col-5">
+            <div class="col-3">
               <div class="card border-change pen" >
                 <img class="card-img-top pen" src="assets/foods/food3.jpeg" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Pizza</b></p>
               </div>
             </div>
-            <div class="col-5">
+            <div class="col-3">
               <div class="card border-change pen" >
                 <img class="card-img-top pen" src="assets/foods/food4.jpeg" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Noodles</b></p>
@@ -167,8 +167,8 @@
         </div>
       </div>
       <div class="ui-grid-a">
-        <div class="ui-block-a"><div class="ui-bar ui-bar space border-color right" style="height:34px">Resturants</div></div>
-        <div class="ui-block-b"><div class="ui-bar ui-bar space border-color left" style="height:34px">See All </div></div>
+        <div class="ui-block-a"><div class="ui-bar ui-bar space border-color right card-text" style="height:34px">Resturants</div></div>
+        <div class="ui-block-b"><div class="ui-bar ui-bar space border-color left card-text" style="height:34px">See All </div></div>
       </div> 
       <div class="card space" onclick="location.href='restaurantView.html'">
         <img class="card-img-top pen" src="assets/resturant1.jpeg" alt="Card image cap">
