--- a/payment/payment.html
+++ b/payment/payment.html
@@ -127,7 +127,7 @@
           <div class="ui-block-a">
               <label for="text-basic">
                 <div class="ui-alt-icon">
-                  <a href="../cart.html" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Payment</a>
+                  <a onclick="history.back()" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Payment</a>
                   <div class="cart-description">Payment</div>
                 </div>
               </label>
